sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__empty11/errors.duarouter
Error: Attribute 'length' in definition of lane '1_0' is empty.
Quitting (on error).
